; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_audio_quality_get_default.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_audio_quality_get_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HB_INVALID_AUDIO_QUALITY = common dso_local global float 0.000000e+00, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @hb_audio_quality_get_default(i32 %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %10 [
    i32 130, label %5
    i32 131, label %6
    i32 132, label %6
    i32 129, label %7
    i32 128, label %8
    i32 133, label %9
  ]

5:                                                ; preds = %1
  store float 5.000000e+00, float* %2, align 4
  br label %12

6:                                                ; preds = %1, %1
  store float 3.000000e+00, float* %2, align 4
  br label %12

7:                                                ; preds = %1
  store float 2.000000e+00, float* %2, align 4
  br label %12

8:                                                ; preds = %1
  store float 5.000000e+00, float* %2, align 4
  br label %12

9:                                                ; preds = %1
  store float 9.100000e+01, float* %2, align 4
  br label %12

10:                                               ; preds = %1
  %11 = load float, float* @HB_INVALID_AUDIO_QUALITY, align 4
  store float %11, float* %2, align 4
  br label %12

12:                                               ; preds = %10, %9, %8, %7, %6, %5
  %13 = load float, float* %2, align 4
  ret float %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
